<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.OrderSummaryFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_summary"
        android:textSize="28sp"/>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Food -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Supplier Name :"
        android:id="@+id/tv_supplier_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".25"
        app:layout_constraintVertical_bias=".1667"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$300"
        android:id="@+id/tv_cust_name_value"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/tv_supplier_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".75"
        app:layout_constraintVertical_bias=".1667"
        />
    <!-- End Food -->

    <!-- Data -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/products_count"
        android:id="@+id/tv_item_count"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".25"
        app:layout_constraintVertical_bias=".3333"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$200"
        android:id="@+id/tv_item_count_value"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/tv_item_count"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".75"
        app:layout_constraintVertical_bias=".3333"
        />
    <!-- End Data -->

    <!-- Rent -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sub Total"
        android:id="@+id/tv_sub_total"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".25"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$200"
        android:id="@+id/tv_sub_total_value"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/tv_sub_total"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".75"
        />
    <!-- End Rent -->


    <!-- Candles -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tax_total"
        android:id="@+id/tv_tax_total"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".25"
        app:layout_constraintVertical_bias=".6667"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$3600"
        android:id="@+id/tv_tax_total_value"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/tv_tax_total"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".75"
        app:layout_constraintVertical_bias=".6667"
        />
    <!-- End Candles -->

    <!-- Utility -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grand_total"
        android:id="@+id/tv_grand_total"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".25"
        app:layout_constraintVertical_bias=".8334"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$150"
        android:id="@+id/tv_grand_total_value"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/tv_grand_total"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="28sp"
        app:layout_constraintHorizontal_bias=".75"
        app:layout_constraintVertical_bias=".8334"
        />

    <Button
        android:id="@+id/btn_place_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginLeft="151dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="172dp"
        android:layout_marginRight="172dp"
        android:layout_marginBottom="39dp"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_grand_total"
        app:layout_constraintVertical_bias="1.0" />
    <!-- End Utility -->

</androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>